# Redshift-DWH

./: .gitignore  ACTUAL_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  commit_architecture.bat  commit_realistic.bat  push_architecture.bat  pyproject.toml  requirements.txt
.github/: .gitkeep
.github/workflows/: .gitkeep  etl-pipeline.yml  terraform-apply.yml  terraform-plan.yml
config/staging/: .gitkeep
data/: .gitkeep  README.md
data/generators/: config.yaml  generate_sample_data.py  requirements.txt
data/sample_data/: .gitkeep
data/schemas/: .gitkeep
docs/: BUSINESS_VALUE_SUMMARY.md  DEVOPS_GUIDE.md  GITHUB_PROJECT_SETUP.md  GITHUB_SETUP_GUIDE.md  JeevanAnaparthy_Enhanced_Profile.md  QUICKSIGHT_DASHBOARDS.md  QUICKSIGHT_DEPLOYMENT_GUIDE.md  TEAM_GUIDE.md  VPC_Usage_Analysis_Complete.docx  VPC_Usage_Conversation_Details.md
docs/architecture/: ARCHITECTURE_OVERVIEW.md  AWS_ARCHITECTURE_DIAGRAM.py  AWS_ARCHITECTURE_HTML.html  README.md  REALISTIC_ARCHITECTURE.html  SIMPLE_ARCHITECTURE.md  VPC_USAGE_ANALYSIS.md
docs/user_guides/: .gitkeep
etl/: README.md
etl/data_quality/: .gitkeep  data_quality_checks.py
etl/glue_jobs/: .gitkeep  data_processing.py  data_quality.py  redshift_loader.py
etl/lambda_functions/: .gitkeep  data_validation.py
etl/step_functions/: .gitkeep
infrastructure/: README.md  main.tf  outputs.tf  variables.tf
scripts/: create_directories.ps1
scripts/automation/: run_etl_pipeline.py  setup_cron_scheduler.sh  test_orchestration.py
scripts/demo/: analytics_demo.py
scripts/deployment/: deploy_automated_etl.bat  (+14 more)
sql/: .gitkeep
(+57 files in other folders)
